<resources>
    <string name="app_name">My Application</string>

    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_clear">C</string>
    <string name="key_comma">,</string>
    <drawable name="clr_normal">#AAAAAA</drawable>
    <drawable name="clr_pressed">#777777</drawable>
</resources>